--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index_crew_one</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="grid_container">
     <!-- inicio header -->
     <header class="header">
-        <img src="../img/Isologo-red.png" alt="isologo crew one">
+        <img src="img/Isologo-red.png" alt="isologo crew one">
     </header>
     <!-- fin header -->
     <!-- inicio nav -->
@@ -26,7 +26,7 @@
     <!-- fin nav -->
     <!-- inicio section -->
     <section class="section">
-        <img src="../img/Logocompleto.png" alt="logo completo crew one">
+        <img src="img/Logocompleto.png" alt="logo completo crew one">
     </section>
     <!-- fin section -->
     <!-- inicio footer -->
@@ -34,17 +34,17 @@
         <div class="socials_menu">
             <a href="#">
                 <div>
-                    <img src="../img/facebook.png" alt="Logo facebook">
+                    <img src="img/facebook.png" alt="Logo facebook">
                 </div>
             </a>
             <a href="#">
                 <div>
-                    <img src="../img/whatsapp.png" alt="Logo Whatsapp">
+                    <img src="img/whatsapp.png" alt="Logo Whatsapp">
                 </div>
             </a>
             <a href="#">
                 <div>
-                    <img src="../img/instagram.png" alt="Logo Instagram">
+                    <img src="img/instagram.png" alt="Logo Instagram">
                 </div>
             </a>
         </div>      
