--- a/contacto.html
+++ b/contacto.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contacto_crewone</title>
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body class="grid_container">
     <!-- inicio header -->
     <header class="header">
-        <img src="../img/Isologo-red.png" alt="isologo crew one">
+        <img src="img/Isologo-red.png" alt="isologo crew one">
     </header>
     <!-- fin header -->
     <!-- inicio nav -->
@@ -29,26 +29,26 @@
 
     </section>
     <!-- fin section -->
-        <!-- inicio footer -->
-        <footer class="footer">
-            <div class="socials_menu">
-                <a href="#">
-                    <div>
-                        <img src="../img/facebook.png" alt="Logo facebook">
-                    </div>
-                </a>
-                <a href="#">
-                    <div>
-                        <img src="../img/whatsapp.png" alt="Logo Whatsapp">
-                    </div>
-                </a>
-                <a href="#">
-                    <div>
-                        <img src="../img/instagram.png" alt="Logo Instagram">
-                    </div>
-                </a>
-            </div>      
-        </footer>
-        <!-- fin footer -->
+    <!-- inicio footer -->
+    <footer class="footer">
+        <div class="socials_menu">
+            <a href="#">
+                <div>
+                    <img src="img/facebook.png" alt="Logo facebook">
+                </div>
+            </a>
+            <a href="#">
+                <div>
+                    <img src="img/whatsapp.png" alt="Logo Whatsapp">
+                </div>
+            </a>
+            <a href="#">
+                <div>
+                    <img src="img/instagram.png" alt="Logo Instagram">
+                </div>
+            </a>
+        </div>      
+    </footer>
+    <!-- fin footer -->
 </body>
 </html>
